# docassemble-ChangingChildCustody2

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: alkiln_tests.yml  alklin_tests.yml  main_n_branch.yml  run_all_tests_GH_server.yml  run_change_of_circumstances_tests_GH_server.yml  run_final_order_more_than_15_days_tests.yml  run_final_order_within_10_days_tests_GH_server.yml  run_final_order_within_15_days_tests_GH_server.yml  run_foreign_order_test_GH_server.yml  run_form_tests.yml  run_interim_motions_tests_GH_server.yml  run_responding_tests_GH_server.yml  run_unknown_final_order_date_tests_GH_server.yml
docassemble/ChangingChildCustody/: __init__.py
docassemble/ChangingChildCustody/data/: changing_child_custody_action_plan.docx
docassemble/ChangingChildCustody/data/questions/: accordion_steps.yml  accordion_steps_skipping_motion_confirmation_questions.yml  aka2j_motion_response_templates.yml  changing_child_custody.yml  new_accordion_usingak_templates.yml  old_accordion_steps.yml
docassemble/ChangingChildCustody/data/sources/: change_of_circumstances.feature  final_order_more_than_15_days.feature  final_order_within_10_days.feature  final_order_within_15_days.feature  foreign_order.feature  interim_motions.feature  interviews_run.feature  modify.feature  responding.feature  unknown_final_order_date.feature
docassemble/ChangingChildCustody/data/templates/: changing_child_custody_action_plan-2023-05-24-review-w-js.docx  changing_child_custody_action_plan.docx  (+2 more)
