[build-system]
requires = [
    "setuptools>=80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.ChangingChildCustody"
version = "2026.06.12"
description = "Changing your custody or Parenting Plan order"
readme = "README.md"
authors = [
    { name = "Alaska Court System", email = "CRobinson@akcourts.gov" },
]
dependencies = [
    "docassemble.AKA2JBranding @ git+https://github.com/A2JatAKCourts/docassemble-AKA2JBranding.git@main",
    "docassemble.AssemblyLine>=4.5.0",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://courtformsonline.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
